================
Next Version
================

===============================
bst-plugins-experimental 1.93.0
===============================

o bst-plugins-experimental has been adapted to work with BuildStream 1.93.0.
  Since the new BuildStream update comes with some breaking changes, this
  package no longer supports BuildStream 1.93.*.

===================
bst-external 0.15.0
===================

o Adapt to new BuildStream plugin namespace in a non-breaking way.

===================
bst-external 0.14.0
===================

o Add deb source plugin
o Add tar source plugin

===================
bst-external 0.13.0
===================

o Add ostree source plugin
o Forked bst-plugins-experimental from bst-external at 3d52546
o Removed docker source, it's in bst-plugins-container now

===================
bst-external 0.12.0
===================

o collect_manifest.py: Uses its own of getting dependencies instead of relying on private APIs.
o git_tag.py: Fixed the config field "track-extra" not being supported

===================
bst-external 0.11.0
===================

o git_tag: Allow pattern matching of tags and tracking multiple branches.
o git_tag: Don't download unused submodules

===================
bst-external 0.10.0
===================

  o Add quilt source plugin for applying patch series.

==================
bst-external 0.9.0
==================

  o Add the ability to generate manifest files using the collect_manifest plugin.

==================
bst-external 0.8.0
==================

  o flatpak_image plugin now automatically moves all files in /etc into
    /files/etc
  o git_tag: Fixed tracking not picking up new changes if the ref is already
    set
  o Add flatpak_repo element plugin for creating a flatpak repository from
    flatpak_image elements.

==================
bst-external 0.7.1
==================

  o Fix git_tag plugin not updating tags if the source fetches from multiple
    repositories

==================
bst-external 0.7.0