@@ -18,6 +18,7 @@ plugins:
     makemaker: 0
     meson: 0
     modulebuild: 0
+    pip: 0
     tar_element: 0
 
 aliases:
