@@ -2,6 +2,8 @@
 Next Version
 ================
 
+o Add pip build element plugin
+
 ===============================
 bst-plugins-experimental 1.93.0
 ===============================
